--- a/chain33.toml
+++ b/chain33.toml
@@ -17,7 +17,7 @@ singleMode=false
 seeds=["47.104.125.151:13802","47.104.125.97:13802","47.104.125.177:13802"]
 enable=true
 isSeed=false
-serverStart=false
+serverStart=true
 msgCacheSize=10240
 dbPath="datadir/addrbook"
 grpcLogFile="grpc33.log"
