--- a/consensus/drivers/tendermint/init_conf/chain33.toml
+++ b/consensus/drivers/tendermint/init_conf/chain33.toml
@@ -7,9 +7,9 @@ logConsoleLevel = "info"
 # 日志文件名，可带目录，所有生成的日志文件都放到此目录下
 logFile = "logs/chain33.log"
 # 单个日志文件的最大值（单位：兆）
-maxFileSize = 100
+maxFileSize = 300
 # 最多保存的历史日志文件个数
-maxBackups = 50
+maxBackups = 100
 # 最多保存的历史日志消息（单位：天）
 maxAge = 28
 # 日志文件名是否使用本地事件（否则使用UTC时间）
@@ -28,8 +28,10 @@ timeoutSeconds=5
 batchBlockNum=128
 driver="leveldb"
 dbPath="datadir"
-isStrongConsistency=false
+dbCache=64
+isStrongConsistency=true
 singleMode=false
+batchsync=false
 
 [p2p]
 seeds=["192.168.3.29:13802","192.168.3.30:13802","192.168.3.13:13802","192.168.3.4:13802"]
@@ -37,7 +39,9 @@ enable=true
 isSeed=true
 serverStart=true
 msgCacheSize=10240
+driver="leveldb"
 dbPath="datadir/addrbook"
+dbCache=4
 grpcLogFile="grpc33.log"
 version=199
 verMix=199
@@ -52,7 +56,7 @@ poolCacheSize=10240
 minTxFee=100000
 
 [consensus]
-name="pbft"
+name="tendermint"
 minerstart=false
 genesis="14KEKbYtKKQm4wMthSK9J4La4nAiidGozt"
 genesisBlockTime=1514533394
@@ -73,15 +77,16 @@ seeds=["192.168.3.4:46656","192.168.3.13:46656","192.168.3.29:46656","192.168.3.
 name="mavl"
 driver="leveldb"
 dbPath="datadir/mavltree"
-
-[localstore]
-driver="leveldb"
-dbPath="datadir/mavltree"
+dbCache=128
 
 [wallet]
 minFee=100000
 driver="leveldb"
 dbPath="datadir/wallet"
+dbCache=16
 signType="secp256k1"
+minerdisable=false
 
 [exec]
+isFree=false
+minExecFee=100000
