--- a/cmd/chain33/chain33.toml
+++ b/cmd/chain33/chain33.toml
@@ -35,7 +35,7 @@ singleMode=false
 batchsync=false
 
 [p2p]
-seeds=["47.104.125.151:13802","47.104.125.97:13802","47.104.125.177:13802"]
+seeds=[]
 enable=true
 isSeed=false
 serverStart=true
@@ -46,9 +46,9 @@ driver="leveldb"
 dbPath="datadir/addrbook"
 dbCache=4
 grpcLogFile="grpc33.log"
-version=118
-verMix=118
-verMax=119
+version=10000
+verMix=10000
+verMax=11000
 
 [rpc]
 jrpcBindAddr="localhost:8801"
