--- a/cmd/chain33/chain33.toml
+++ b/cmd/chain33/chain33.toml
@@ -1,4 +1,5 @@
 Title="chain33"
+TestNet=true
 
 [log]
 # 日志级别，支持debug(dbug)/info/warn/error(eror)/crit
@@ -46,9 +47,7 @@ driver="leveldb"
 dbPath="datadir/addrbook"
 dbCache=4
 grpcLogFile="grpc33.log"
-version=10000
-verMix=10000
-verMax=11000
+
 
 [rpc]
 jrpcBindAddr="localhost:8801"
