--- a/cmd/chain33/chain33.toml
+++ b/cmd/chain33/chain33.toml
@@ -41,6 +41,7 @@ enable=true
 isSeed=false
 serverStart=true
 innerSeedEnable=true
+useGithub=true
 innerBounds=300
 msgCacheSize=10240
 driver="leveldb"
