Add docker-compose for CI
Former-commit-id: 698c1a7e0e2057ed51d6719eb752bd31fc228157

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ after_script:
 stages:
     - build
     - test
+    - deploy
 
 go_fmt:
     stage: build
@@ -44,3 +45,10 @@ go_test:
         - 33cn
     script:
         - make test
+
+deploy:
+    stage: deploy
+    tags:
+        - 33cn
+    script:
+        - make docker-compose
