authority-management:增加authority证书解析和验签接口
Former-commit-id: 72e7671d583c667596fef484ee468a3ef1072f67

--- a/cmd/chain33/chain33.toml
+++ b/cmd/chain33/chain33.toml
@@ -79,3 +79,11 @@ minerdisable=false
 [exec]
 isFree=false
 minExecFee=100000
+
+[auth]
+cryptoPath="authdir/crypto"
+securityLevel=256
+defaultProvider="SW"
+hashAlgorithm="SHA2"
+keyStorePath="authdir/keystore"
+orgName="chain33"
