enable 'deploy' stage for all branch
Former-commit-id: b6daedff451bdc03aed2af70ddadecb3ea54679f
Former-commit-id: e39f2379bc55f7995894ee945ec52fa74bbddfaf

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,6 @@ deploy:
         - make build_ci
         - make docker-compose
         - cd build && docker-compose down && cd ..
-    only:
-        - master
-        - develop
+#    only:
+#        - master
+#        - develop
