--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,7 @@ go_fmt:
     only:
         - master
         - develop
+        - bty_develop
 
 go_lint:
     stage: build
@@ -37,6 +38,7 @@ go_lint:
     only:
         - master
         - develop
+        - bty_develop
 
 go_build:
     stage: build
@@ -47,6 +49,7 @@ go_build:
     only:
         - master
         - develop
+        - bty_develop
 
 go_test:
     stage: test
@@ -58,6 +61,7 @@ go_test:
     only:
         - master
         - develop
+        - bty_develop
 
 memory_sanitizer:
     stage: test
@@ -66,6 +70,7 @@ memory_sanitizer:
     only:
         - master
         - develop
+        - bty_develop
 
 code_coverage:
     stage: test
@@ -74,6 +79,7 @@ code_coverage:
     only:
         - master
         - develop
+        - bty_develop
 
 code_coverage_report:
     stage: test
@@ -82,6 +88,7 @@ code_coverage_report:
     only:
         - master
         - develop
+        - bty_develop
 
 deploy:
     stage: deploy
@@ -94,4 +101,5 @@ deploy:
     only:
         - master
         - develop
+        - bty_develop
 
