add crypto tool
Former-commit-id: 5ce8bb2ca38dc72ffed0ce3e55b74265f7f79740
Former-commit-id: e34abce0a8bf4d9247811d84ec1893ec42d50944

--- a/cmd/chain33/chain33.toml
+++ b/cmd/chain33/chain33.toml
@@ -82,7 +82,7 @@ isFree=false
 minExecFee=100000
 
 [auth]
-cryptoPath="authdir/crypto"
+cryptoPath="authdir/crypto/User"
 securityLevel=256
 defaultProvider="SW"
 hashAlgorithm="SHA2"
